[package]
name = "lpsql"
description = "[draft] Micro PostgreSQL async driver based on libpq."
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0"
simplelog = "0"
pq-sys = "0"
chrono = "0.4"
tinyjson = "2"
