[package]
name = "lpsql"
description = "[draft] Micro PostgreSQL async driver based on libpq."
version = "0.1.0"
authors = ["Sergei Minaev <i@zenux.ru>"]
edition = "2021"

[[bin]]
name = "lpsql"
path = "src/bin/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0"
simplelog = "0"
pq-sys = "0"
chrono = "0.4"
tinyjson = "2"
